# cdmenu

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  polling.rs  tray.rs
src-tauri/src/bitbucket/: client.rs  mod.rs  types.rs
